syntax = "proto3";
package Protocol;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Protocol";

enum PacketId {
    PKT_ECHO = 0;
    PKT_ECHO_RESULT = 1;
  }

message PktEcho {
  string message = 1;
}

message PktEchoResult {
  string message = 1;
}